Add the traffic light implementation using the FFM API to libgpiod.
Presently we are hitting an issue compiling to the native image.